# CPPBase

./: .gitignore
Lesson1/Task1/: Task1.sln
Lesson1/Task1/Task1/: Task1.vcxproj  main.cpp
Lesson10/Task1/: CMakeLists.txt  main.cpp
Lesson10/Task2/: CMakeLists.txt
Lesson10/Task2/inc/: parallelogram.h
Lesson10/Task2/src/: rhombus.cpp
Lesson11/Task1/: CMakeLists.txt  Task1.sln  main.cpp
Lesson11/Task1/GreeterLib/: GreeterLib.vcxproj  GreeterLib.vcxproj.filters  greeter_lib.cpp  greeter_lib.h
Lesson11/Task1/Task1/: Task1.cpp  Task1.vcxproj  Task1.vcxproj.filters
Lesson11/Task1/Task1/lib/: GreeterLib.lib
Lesson11/Task1/lib/: GreeterLib.lib
Lesson11/Task1/lib/inc/: greeter_lib.h
Lesson11/Task2/: Task2.sln
Lesson11/Task2/LeaverLib/: LeaverLib.vcxproj  LeaverLib.vcxproj.filters  leaver_lib.cpp  leaver_lib.h
Lesson11/Task2/Task2/: Task2.cpp  Task2.vcxproj  Task2.vcxproj.filters
Lesson11/Task3/: CMakeLists.txt  Task3.cpp
Lesson11/Task3/LeaverLib/: CMakeLists.txt  leaver_lib.h
Lesson11/Task4/: Task4.sln
Lesson11/Task4/ShapesLib/: ShapesLib.vcxproj  ShapesLib.vcxproj.filters
Lesson11/Task4/Task4/: Task4.vcxproj  Task4.vcxproj.filters
Lesson11/Task5/: CMakeLists.txt  Task5.cpp
Lesson11/Task5/ShapesLib/: CMakeLists.txt
Lesson11/Task5/ShapesLib/inc/: equilateral_triangle.h  rectangle.h  rhombus.h  right_triangle.h  square.h  triangle.h
Lesson11/Task5/ShapesLib/src/: isosceles_triangle.cpp  quadrangle.cpp
Lesson11/Task5/lib/: ShapesLib.lib
Lesson11/Task5/lib/inc/: equilateral_triangle.h  isosceles_triangle.h  parallelogram.h  quadrangle.h  rhombus.h
Lesson2/Task1/: Task1.sln
Lesson2/Task1/Task1/: Task1.cpp  Task1.vcxproj
Lesson2/Task2/: Task2.sln
Lesson2/Task2/Task2/: Task2.cpp  Task2.vcxproj
Lesson2/Task3/: Task3.sln
Lesson2/Task3/Task3/: Task3.cpp  Task3.vcxproj
Lesson3/Task1/: Task1.sln
Lesson3/Task1/Task1/: Task1.cpp  Task1.vcxproj
Lesson3/Task2/: Task2.sln
Lesson3/Task2/Task2/: Task2.cpp  Task2.vcxproj
Lesson4/Task1/: Task1.sln
Lesson4/Task1/Task1/: Task1.cpp  Task1.vcxproj  Task1.vcxproj.filters  in.txt
Lesson4/Task2/: Task2.sln
Lesson4/Task2/Task2/: Task2.cpp  Task2.vcxproj  Task2.vcxproj.filters
Lesson5/Task1/: Task1.sln
Lesson5/Task1/Task1/: Task1.cpp  Task1.vcxproj
Lesson5/Task2/: Task2.sln
Lesson5/Task2/Task2/: Task2.cpp  Task2.vcxproj
Lesson5/Task3/: Task3.sln
Lesson5/Task3/Task3/: Task3.cpp  Task3.vcxproj
Lesson6/Task1/: Task1.sln
Lesson6/Task1/Task1/: Task1.cpp  Task1.vcxproj  Task1.vcxproj.filters  math.cpp  math.h
Lesson6/Task2/: Task2.sln
Lesson6/Task2/Task2/: Task2.cpp  Task2.vcxproj  Task2.vcxproj.filters  counters.cpp  counters.h
Lesson6/Task3/: Task3.sln
Lesson6/Task3/Task3/: Task3.cpp  Task3.vcxproj  Task3.vcxproj.filters  isosceles_triangle.h  quadrangle.h  rectangle.h
Lesson7/Task1/: Task1.sln
Lesson7/Task1/Task1/: Task1.cpp  (+1 more)
Lesson7/Task2/: Task2.sln
Lesson8/Task1/: Task1.sln
Lesson8/Task2/: Task2.sln
Lesson9/Task1/: Task1.sln
Lesson9/Task2/: Task2.sln
(+57 files in other folders)
