cmake_minimum_required(VERSION 3.22.0)
project(Task5)
set(EXECUTABLE Task5)
set(LIB_DIR "${CMAKE_CURRENT_SOURCE_DIR}/ShapesLib")
set(INC_DIR "${LIB_DIR}/inc")
add_subdirectory(${LIB_DIR})
include_directories(${INC_DIR})
add_executable(${EXECUTABLE} Task5.cpp)
target_link_libraries(${EXECUTABLE} ShapesLib)
